--- a/app/src/main/res/layout/activity_fast food.xml
+++ b/app/src/main/res/layout/activity_fast food.xml
@@ -77,7 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="104dp"
-        android:text="Choose your gender"
+        android:text="Do you eat junk food daily?"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -86,7 +86,7 @@
         app:layout_constraintHeight_percent="0.05"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintWidth_percent="0.55" />
+        app:layout_constraintWidth_percent="0.75" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -110,18 +110,22 @@
         android:id="@+id/imageView5"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginEnd="5dp"
         android:src="@drawable/male"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.40"
         app:layout_constraintTop_toTopOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.50" />
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintWidth_percent="0.48"
+        app:srcCompat="@drawable/nofastfood" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="2dp"
         android:src="@drawable/female"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -129,6 +133,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
         app:layout_constraintVertical_bias="0.181"
-        app:layout_constraintWidth_percent="0.50" />
+        app:layout_constraintWidth_percent="0.48"
+        app:srcCompat="@drawable/fastfood" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
