--- a/app/src/main/res/layout/activity_weight.xml
+++ b/app/src/main/res/layout/activity_weight.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="20dp"
         android:drawableStart=""
         android:ems="10"
-        android:hint="Male/Female"
+        android:hint="50 kg"
         android:inputType="textEmailAddress"
         android:paddingStart="22dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
@@ -77,7 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="104dp"
-        android:text="Choose your gender"
+        android:text="Choose your weight"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
@@ -107,28 +107,17 @@
         app:srcCompat="@drawable/left_arrow" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/imageView7"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/male"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/height"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.40"
-        app:layout_constraintTop_toTopOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.50" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="2dp"
-        android:src="@drawable/female"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintHeight_percent="0.40"
+        app:layout_constraintHeight_percent="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
-        app:layout_constraintVertical_bias="0.181"
-        app:layout_constraintWidth_percent="0.50" />
+        app:layout_constraintWidth_percent="0.80"
+        tools:srcCompat="@drawable/weight" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
