--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -125,7 +125,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
-        android:drawableStart=""
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
@@ -142,7 +141,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        android:drawableStart=""
+        android:drawableStart="@drawable/padlock"
         android:ems="10"
         android:hint="Password"
         android:inputType="textEmailAddress"
