--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -11,7 +11,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="20dp"
-        android:drawableStart=""
         android:ems="10"
         android:hint="10 Minutes"
         android:inputType="textEmailAddress"
@@ -51,7 +50,6 @@
         android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
-
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.07"
@@ -110,7 +108,7 @@
         android:id="@+id/imageView14"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/Exercise"
+        android:src="@drawable/exercise"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.45"
         app:layout_constraintStart_toStartOf="parent"
