--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView1"
         app:layout_constraintEnd_toStartOf="@+id/imageView1"
         app:layout_constraintHeight_percent="0.10"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView1"
         app:layout_constraintWidth_percent="0.10"
         app:srcCompat="@drawable/facebook" />
@@ -81,24 +82,26 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.10"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintWidth_percent="0.10"
-        app:srcCompat="@drawable/google"
-        tools:layout_editor_absoluteX="185dp" />
+        app:srcCompat="@drawable/google" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="60dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="@+id/imageView1"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintHeight_percent="0.10"
         app:layout_constraintStart_toEndOf="@id/imageView1"
         app:layout_constraintTop_toTopOf="@+id/imageView1"
         app:layout_constraintWidth_percent="0.10"
-        app:srcCompat="@drawable/instagram"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/instagram" />
 
     <Button
         android:id="@+id/button"
@@ -106,7 +109,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
         android:background="#126FE6"
-        android:text="REGISTER WITH EEMAIL"
+        android:text="REGISTER WITH EMAIL"
         android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
