--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:text="OR SIGN UP WITH"
+        android:textColor="#126FE6"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageView1"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        android:textStyle="bold"
-        android:textColor="#126FE6"/>
+        app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView3"
@@ -91,20 +91,18 @@
         android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="40dp"
         android:background="#126FE6"
+        android:onClick="signup"
         android:text="SIGN UP"
         android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:onClick="signup"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHeight_percent="0.07"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/editText3"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/editText2"
         app:layout_constraintWidth_percent="0.80" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -122,51 +120,55 @@
         app:layout_constraintGuide_percent="0.9" />
 
     <EditText
+        android:drawablePadding="10dp"
         android:id="@+id/editText"
-        android:layout_width="0dp"
+        android:layout_width="329dp"
         android:layout_height="0dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:paddingStart="50dp"
         app:layout_constraintEnd_toEndOf="@+id/button"
         app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toTopOf="@+id/guideline4"
-        app:layout_constraintWidth_percent="0.80" />
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
+        app:layout_constraintWidth_percent="0.80"
+        android:drawableStart="@drawable/mail"
+        android:drawableTint="#126FE6"/>
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="0dp"
+        android:drawableStart="@drawable/padlock"
+        android:drawableTint="#126FE6"
+        android:layout_width="329dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Password"
+        android:drawablePadding="10dp"
         android:inputType="textEmailAddress"
-        android:paddingStart="50dp"
         app:layout_constraintEnd_toEndOf="@+id/button"
         app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/editText"
         app:layout_constraintWidth_percent="0.80" />
 
     <EditText
         android:id="@+id/editText3"
-        android:layout_width="0dp"
+        android:layout_width="329dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Confirm Password"
+        android:hint="Enter your Name"
+        android:drawableStart="@drawable/user"
+        android:drawableTint="#126FE6"
         android:inputType="textEmailAddress"
-        android:paddingStart="50dp"
+        android:drawablePadding="10dp"
         app:layout_constraintEnd_toEndOf="@+id/button"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
         app:layout_constraintWidth_percent="0.80" />
 
     <TextView
@@ -189,6 +191,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="48dp"
+        android:onClick="back"
         android:tint="#000000"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -198,7 +201,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.607"
         app:layout_constraintWidth_percent="0.14"
-        app:srcCompat="@drawable/left_arrow"
-        android:onClick="back"/>
+        app:srcCompat="@drawable/left_arrow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
