--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,8 +140,10 @@
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="Password"
+        android:drawablePadding="10dp"
+        android:drawableTint="#126FE6"
         android:inputType="textEmailAddress"
-        android:paddingStart="50dp"
+        android:drawableStart="@drawable/padlock"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="@+id/button"
         app:layout_constraintHeight_percent="0.08"
@@ -156,8 +158,10 @@
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:hint="Email"
+        android:drawablePadding="10dp"
+        android:drawableTint="#126FE6"
+        android:drawableStart="@drawable/mail"
         android:inputType="textEmailAddress"
-        android:paddingStart="50dp"
         app:layout_constraintBottom_toTopOf="@+id/editText5"
         app:layout_constraintEnd_toEndOf="@+id/button"
         app:layout_constraintHeight_percent="0.08"
