--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -158,16 +158,15 @@
         android:layout_width="329dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
+        android:drawableStart="@drawable/user"
+        android:drawablePadding="10dp"
+        android:drawableTint="#126FE6"
         android:ems="10"
         android:hint="Enter your Name"
-        android:drawableStart="@drawable/user"
-        android:drawableTint="#126FE6"
         android:inputType="textEmailAddress"
-        android:drawablePadding="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
         app:layout_constraintWidth_percent="0.80" />
 
