--- a/app/src/main/res/layout/activity_junkfood.xml
+++ b/app/src/main/res/layout/activity_junkfood.xml
@@ -4,22 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Male_female">
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="20dp"
-        android:ems="10"
-        android:hint="10 Minutes"
-        android:inputType="textEmailAddress"
-        android:paddingStart="22dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintWidth_percent="0.40" />
+    tools:context=".Junkfood">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -40,12 +25,24 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="1.0" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click on image"
+        android:textColor="#126FE6"
+        android:textSize="18sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+
 
     <Button
         android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#126FE6"
+        android:background="#9A9C9C"
         android:text="NEXT"
         android:textColor="#ffffff"
         android:textSize="18sp"
@@ -72,19 +69,18 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="104dp"
-        android:text="Daily exercise duration?"
+        android:text="Do you eat junk food daily?"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.05"
-        app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintWidth_percent="0.67" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="0.75" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -105,15 +101,34 @@
         app:srcCompat="@drawable/left_arrow" />
 
     <ImageView
-        android:id="@+id/imageView14"
+        android:onClick="nextscreen1"
+        android:id="@+id/imageView5"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/exercise"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.45"
+        app:layout_constraintHeight_percent="0.40"
+        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintWidth_percent="0.48"
+        app:srcCompat="@drawable/nofastfood" />
+
+    <ImageView
+        android:onClick="nextscreen"
+        android:id="@+id/imageView6"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintHeight_percent="0.40"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
-        app:layout_constraintWidth_percent="0.90" />
-
+        app:layout_constraintVertical_bias="0.181"
+        app:layout_constraintWidth_percent="0.48"
+        app:srcCompat="@drawable/fastfood"
+        tools:srcCompat="@drawable/fastfood" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
