--- a/app/src/main/res/layout/activity_male_female.xml
+++ b/app/src/main/res/layout/activity_male_female.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Male_female">
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="20dp"
-        android:ems="10"
-        android:hint="Male/Female"
-        android:inputType="textEmailAddress"
-        android:paddingStart="22dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintWidth_percent="0.40" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
@@ -45,12 +30,11 @@
         android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#126FE6"
+        android:background="#9A9C9C"
         android:text="NEXT"
         android:textColor="#ffffff"
         android:textSize="18sp"
         android:textStyle="bold"
-
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.07"
@@ -72,20 +56,30 @@
         app:layout_constraintGuide_percent="0.9" />
 
     <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click on image"
+        android:textColor="#126FE6"
+        android:textSize="18sp"
+        android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
+
+    <TextView
         android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="104dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="88dp"
         android:text="Choose your gender"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="@+id/button"
-        app:layout_constraintHeight_percent="0.05"
-        app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintWidth_percent="0.55" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -107,18 +101,21 @@
         android:onClick="back"/>
 
     <ImageView
+        android:onClick="nextscreen"
         android:id="@+id/imageView5"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginEnd="4dp"
         android:src="@drawable/male"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.40"
         app:layout_constraintTop_toTopOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         app:layout_constraintWidth_percent="0.50" />
 
     <ImageView
+        android:onClick="nextscreen"
         android:id="@+id/imageView6"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -128,7 +125,7 @@
         app:layout_constraintHeight_percent="0.40"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline4"
-        app:layout_constraintVertical_bias="0.181"
+        app:layout_constraintVertical_bias="0.495"
         app:layout_constraintWidth_percent="0.50" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
